# matercula

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Lehrplan-Digitale-Grundbildung.txt  README.md  TRANSLATION-TODO.md  biome.json  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  fly.toml  fly.worker.toml  lint_output.txt  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy.yml
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx
components/ui/: card.tsx  input.tsx  label.tsx
components/workspace/: anwendungsbereich-tab-view.tsx  bereich-tab-view.tsx  block-editor.tsx  document-area.tsx  document-view.tsx  klasse-tab-view.tsx  kompetenz-tab-view.tsx  lehrplan-backlinks.tsx  link-vorschlaege.tsx  material-linker.tsx  material-overview.tsx  material-uebersicht.tsx  settings-dialog.tsx  sidebar.tsx  tab-bar.tsx  workspace-context.tsx  workspace-frame.tsx
data/lehrplan/: README.md  curriculum.json  digitale-grundbildung.json
lib/ai/: providers.ts
lib/auth/: index.ts  request.ts  session.ts
lib/curriculum/: document-content.ts  dokument-inhalt.ts  import.ts  links.ts  repository.ts  suggestions.ts  vorschlaege.ts
lib/db/: index.ts
scripts/: migrate.mjs  seed-curriculum.ts  seed-dev.ts  seed-documents.ts  seed-dokumente.ts  seed-lehrplan.ts  worker.ts
services/extractor/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
services/extractor/app/: extraction.py  logging_config.py  main.py
services/extractor/tests/: conftest.py  test_extract.py
tests/: smoke.spec.ts
(+98 files in other folders)
